package simulator.inventory;

public enum PartsFulfillmentStatus {
    FULFILLED,
    BLOCKED
}
