package simulator.model;

public enum TicketStatus {
    WAITING,
    IN_PROGRESS,
    BLOCKED,
    COMPLETE
}
