@startuml ClassDiagram

skinparam classAttributeIconSize 0

class SimulationEngine {
    - clockHours: double
    - events: PriorityQueue<Event>
    - jobQueue: JobQueue
    - partsDepartment: PartsDepartment
    - metrics: MetricsCollector
    + run(): MetricsCollector
    - push(double, EventType, Customer, ServiceTicket): void
}

' Discrete-event model: ordered by (time, sequence) in the engine's PriorityQueue
class Event <<record>> {
    - time: double
    - type: EventType
    - sequence: long
    - customer: Customer
    - ticket: ServiceTicket
}

enum EventType {
    ARRIVAL
    INTAKE_COMPLETE
    SERVICE_COMPLETE
    PARTS_ARRIVAL
}

class Customer {
    - arrivalTime: double
    - totalWaitTime: double
    - assignedAdvisor: ServiceAdvisor
    - ticket: ServiceTicket
}

class ServiceAdvisor {
    - advisorId: int
    - isAvailable: boolean
    - currentCustomer: Customer
    + intakeCustomer(Customer): ServiceTicket
}

class ServiceTicket {
    - ticketId: int
    - jobType: String
    - estimatedLaborTime: double
    - requiredParts: List<PartRequirement>
    - assignedTechnician: Technician
    - status: TicketStatus
    - queueDelay: double
    - partsDelay: double
    + addRequiredPart(int, int): void
}

class PartRequirement {
    - partId: int
    - quantity: int
}

enum TicketStatus {
    WAITING
    IN_PROGRESS
    BLOCKED
    COMPLETE
}

class Technician {
    - technicianId: int
    - experienceLevel: int
    - isAvailable: boolean
    - currentTicket: ServiceTicket
    - assignedBay: RepairBay
    + getServiceTime(): double
}

class RepairBay {
    - bayId: int
    - isOccupied: boolean
    - assignedTechnician: Technician
    + setOccupied(boolean): void
    + printOccupancy(double): void
}

class JobQueue {
    - queue: LinkedList<ServiceTicket>
    + enqueue(ServiceTicket): void
    + dequeue(): ServiceTicket
}

class MetricsCollector {
    - avgWaitTime: double
    - techUtilization: Map<Technician, Double>
    - jobsCompletedPerDay: int
    - partsDelays: List<Double>
    + record(ServiceTicket): void
    + report(): void
}

class PartsInventory {
    - partsById: Map<Integer, Part>
    + addPart(Part): void
    + requestPart(int, int): boolean
    + fulfillRequirements(Iterable<PartRequirement>): boolean
    + shouldReorder(Part): boolean
    + receiveStock(int, int): void
}

class Part {
    - partId: int
    - description: String
    - quantityOnHand: int
    - reorderPoint: int
    - reorderQuantity: int
    - meanLeadTimeHours: double
    + setQuantityOnHand(int): void
    + printAvailability(int): void
}

package "Parts Department" {
    class PartsDepartment {
        - inventory: PartsInventory
        - pendingOrders: List<PendingPartOrder>
        - blockedTickets: List<ServiceTicket>
        - averageFulfillmentTimeHours: double
        + requestPartsForTicket(ServiceTicket, double): PartsFulfillmentResult
        + processPendingOrders(double): List<ServiceTicket>
        + getAverageFulfillmentTimeHours(): double
        + getInventory(): PartsInventory
        + getPendingOrders(): List<PendingPartOrder>
        + getBlockedTickets(): List<ServiceTicket>
    }

    class PendingPartOrder {
        - orderId: int
        - partId: int
        - quantity: int
        - orderTimeHours: double
        - arrivalTimeHours: double
        + isDue(double): boolean
    }

    class PartsFulfillmentResult {
        - status: PartsFulfillmentStatus
        - partsDelayHours: double
        + isFulfilled(): boolean
    }

    enum PartsFulfillmentStatus {
        FULFILLED
        BLOCKED
    }
}

SimulationEngine "1" *-- "many" Event : schedules in PriorityQueue
SimulationEngine "1" *-- "1" JobQueue
SimulationEngine "1" *-- "1" MetricsCollector
SimulationEngine "1" *-- "1" PartsDepartment

Event "1" --> "1" EventType
Event "many" ..> "0..1" Customer
Event "many" ..> "0..1" ServiceTicket

PartsDepartment "1" *-- "1" PartsInventory
PartsDepartment "1" o-- "many" PendingPartOrder
PartsDepartment "many" ..> "many" ServiceTicket : blocks / releases
PartsDepartment ..> PartsFulfillmentResult : returns

Customer "1" --> "1" ServiceTicket
Customer "many" --> "1" ServiceAdvisor
ServiceAdvisor "1" ..> "1" ServiceTicket : creates
ServiceTicket "1" *-- "many" PartRequirement
ServiceTicket "1" --> "1" TicketStatus
ServiceTicket "many" ..> "1" PartsDepartment : requests parts

PartRequirement "many" --> "1" Part
Technician "1" --> "1" RepairBay
Technician "1" ..> "1" JobQueue : pulls from
Technician "1" ..> "1" PartsDepartment : requests parts

PartsInventory "1" *-- "many" Part
PendingPartOrder "many" --> "1" Part

@enduml
